--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
 	<body>
 		<div class="container">
 			<header class="clearfix">
-				<span>Sudoroom</span>
+				<a href ="https://sudoroom.org/donate/"><span>Sudoroom</span>
 				<h1>Activism, Tech & Art</h1>
 				<p></p>
 				<h1>we provide a UNIQUE point of view</h1>
-				<h1>our projects mix Social activism with Innovation</h1>
-				
-				<h1>we need your help!</h1>
+				<h1>our projects mix Social activism with Innovation</h1></a>
 
-				<h1>Donate now!</h1>
 				<nav>
 					<a href="https://sudoroom.org/donate/" class="icon-arrow-left" data-info="Donate">Donate now</a>
 					<a href="https://sudoroom.org/humans/account/create" class="icon-drop" data-info="SudoHumans">Sign up for an account on SudoHuman</a>
@@ -35,9 +32,6 @@
 					<li><img src="images/1.jpg" alt="image01"/></li>
 					<li><img src="images/2.jpg" alt="image02"/></li>
 					<li><img src="images/3.jpg" alt="image03"/></li>
-					<li><img src="images/4.jpg" alt="image04"/></li>
-					<li><img src="images/5.jpg" alt="image05"/></li>
-					<li><img src="images/6.jpg" alt="image06"/></li>
 				</ul>
 				<div id="cbp-bicontrols" class="cbp-bicontrols">
 					<span class="cbp-biprev"></span>
